--- a/app/src/main/res/layout/camera_fragement.xml
+++ b/app/src/main/res/layout/camera_fragement.xml
@@ -5,48 +5,56 @@
 
     <com.otaliastudios.cameraview.CameraView
         android:id="@+id/camera"
-        android:keepScreenOn="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:keepScreenOn="true" />
 
-    <com.isaacudy.kfilter.KfilterView
+    <ImageView
         android:id="@+id/character_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:scaleX="1.3"
+        android:visibility="invisible" />
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
 
     <ImageView
         android:id="@+id/click"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/click"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/click" />
+
 
     <ImageView
         android:id="@+id/next_arrow_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="24dp"
-        android:visibility="gone"/>
+        android:src="@drawable/arrow_white"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/back_arrow_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_margin="24dp"
         android:rotation="180"
-        android:visibility="gone"/>
-
-
+        android:src="@drawable/arrow_white"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
